--- a/server/package.json
+++ b/server/package.json
@@ -6,9 +6,10 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "nanoid": "^3.2.0",
+    "react-redux": "^7.2.6",
     "socket.io": "^4.0.1"
   },
-  "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js"
